// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View>
  <View
    style={Object {}}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#171f3d",
          "fontSize": 18,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#171f3d",
          "fontSize": 18,
        }
      }
    >
      Destination: 
      Shady Grove
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#171f3d",
          "fontSize": 18,
        }
      }
    >
      Boarding!
    </Text>
  </View>
  <View
    style={Object {}}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#171f3d",
          "fontSize": 18,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#171f3d",
          "fontSize": 18,
        }
      }
    >
      Destination: 
      Shady Grove
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#171f3d",
          "fontSize": 18,
        }
      }
    >
      Train is arriving...
    </Text>
  </View>
  <View
    style={Object {}}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#171f3d",
          "fontSize": 18,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#171f3d",
          "fontSize": 18,
        }
      }
    >
      Destination: 
      Shady Grove
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#171f3d",
          "fontSize": 18,
        }
      }
    >
      Arrival in 
      10
       minutes
    </Text>
  </View>
  <View
    style={Object {}}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#171f3d",
          "fontSize": 18,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#171f3d",
          "fontSize": 18,
        }
      }
    >
      Destination: 
      Shady Grove
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#171f3d",
          "fontSize": 18,
        }
      }
    >
      Arrival in TBD minutes
    </Text>
  </View>
</View>
`;

exports[`renders when no trains scheduled 1`] = `
<View
  style={Object {}}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#171f3d",
        "fontSize": 18,
      }
    }
  >
    No trains are currently scheduled
  </Text>
</View>
`;
